--- a/src/applications/BarracksManagementTool/components/InsComponent.css
+++ b/src/applications/BarracksManagementTool/components/InsComponent.css
@@ -1,5 +1,5 @@
 :root {
-    --clr-outline: rgb(31, 31, 31);
+    --clr-outline: rgba(31, 31, 31, 0.9);
 }
 
 
@@ -42,7 +42,7 @@
 }
 
 .InsComp.open > header {
-    border-bottom: 1px solid rgba(77, 77, 77, 0.8);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.35);
 }
 
 .InsComp.open {
@@ -65,10 +65,15 @@
     flex-wrap: nowrap;
     float: right;
     margin: 0 20px 0 0;
+    border: 2px solid rgba(0, 0, 0, 0.6);
+    border-bottom-left-radius: 9px;
+    border-bottom-right-radius: 9px;
+    border-top: 3px solid rgb(110, 110, 110);
+    margin-top: -3px;
 }
 
 .InsComp.array-list-view > .btn-group > button {
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgb(110, 110, 110);
     height: 23px;
     width: 28px;
     text-align: center;
@@ -77,7 +82,6 @@
     border: 1px solid var(--clr-outline);
     border-top: 0;
     outline: none;
-    margin-top: -2px;
 }
 
 .InsComp.array-list-view > .btn-group > button:active {
@@ -86,6 +90,7 @@
 
 .InsComp.array-list-view > .btn-group > button:hover {
     cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.6);
 }
 
 .InsComp.array-list-view > .btn-group > button:first-child {
@@ -99,8 +104,8 @@
 
 .InsComp.array-list-view > ul {
     margin: 8px 8px 0 8px;
-    border: 1px solid var(--clr-outline);
-    background-color: rgba(255, 255, 255, 0.4);
+    border: 3px solid rgba(0, 0, 0, 0.6);
+    background-color: rgb(110, 110, 110);
     border-radius: 3px;
     min-height: 50px;
     padding: 2px 0 2px 0;
