added editing and moving timers in the view

--- a/src/applications/Clock/app.css
+++ b/src/applications/Clock/app.css
@@ -33,3 +33,11 @@ table thead tr th:nth-child(1){
 table thead tr th:nth-child(5) {
     width: 200px!important;
 }
+
+.updateTimerBtnGroup {
+    width: 100%;
+}
+
+.updateTimerBtnGroup > :nth-child(2) {
+    width: 60px;
+}
