added scroll bars to panels when overflowing
when content is larger than panels add scroll bars.

--- a/src/applications/BarracksManagementTool/app.css
+++ b/src/applications/BarracksManagementTool/app.css
@@ -156,6 +156,10 @@
     width: 100%;
 }
 
+.dock-frame > * > div {
+    overflow: auto;
+}
+
 #NavigatorPanel,
 #NavigatorPanel .rstm-tree-item-group {
     display: block;
