getting font size to be the same on production and dev

--- a/src/applications/BarracksManagementTool/app.css
+++ b/src/applications/BarracksManagementTool/app.css
@@ -156,8 +156,9 @@
     width: 100%;
 }
 
-.dock-frame > * > div {
+.dock-frame > div > div {
     overflow: auto;
+    font-size: 15px;
 }
 
 #NavigatorPanel,
