getting header of inspector to show same size on prod and dev
We still have problems with font sizes not being the same between production and dev. This is just a quick fix to force the same size header font for current time until the bigger bug is fixed.

--- a/src/applications/BarracksManagementTool/app.css
+++ b/src/applications/BarracksManagementTool/app.css
@@ -175,7 +175,7 @@
 #InspectorPanel > header {
     background-color: lightgray;
     color: black;
-    font-size: 1.9em;
+    font-size: 24px;
     padding: 8px;
     width: 100%;
     font-weight: 600;
