forcing same font size on panels

--- a/src/applications/BarracksManagementTool/components/InsComponent.css
+++ b/src/applications/BarracksManagementTool/components/InsComponent.css
@@ -25,7 +25,7 @@
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none;
-    
+    font-size: 1.2em;
 }
 
 .InsComp > header:before {
