--- a/src/applications/BarracksManagementTool/app.css
+++ b/src/applications/BarracksManagementTool/app.css
@@ -154,6 +154,7 @@
     background-color: rgb(110, 110, 110);
     height: 100%;
     width: 100%;
+    font-size: 14px;
 }
 
 .dock-frame > div > div {
