fixed style bug that i made with the last few changes yesterday
I fixed the styling bug i made from yesterday when editing the list-menu-items-grid. I removed this class from the document view as it should not have been there. I added a new property pageName for the layout so i can inject it into the class so that css page targeting can be done. also removed button import that was unused and creating a warning in the documents page.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -107,12 +107,25 @@ p {
     padding-bottom: 0;
 }*/
 
-.list-menu-items-grid {
-    display: flex-wrap;
+.page-documents .body-page {
     font-size: 12px;
     font-weight: 500;
     background-color: rgba(0, 0, 0, 0.5)!important;
     color: rgb(119, 119, 119)!important;
+}
+
+.page-documents .body-page td {
+    max-width: 300px;
+}
+
+.page-documents .body-page .icon-link,
+.page-documents .body-page a {
+    color: white;
+    font-weight: 500;
+}
+
+.list-menu-items-grid {
+    display: flex-wrap;
 }
 
 .list-menu-items-grid>div {
@@ -122,19 +135,18 @@ p {
     margin: 5px;
     padding: 5px;
     border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.45);
     min-width: 100px;
 }
 
-.list-menu-items-grid td {
-    max-width: 300px;
-}
+
 
 .list-menu-items-grid tr>td:first-child {
     width: 145px;
 }
 
 .list-menu-items-grid>div:hover {
-    
+    background-color: rgba(255, 255, 255, 0.75);
     cursor: pointer;
 }
 
@@ -148,12 +160,6 @@ p {
     display: block;
     text-align: center;
     margin-top: 5px;
-}
-
-.list-menu-items-grid .icon-link,
-.list-menu-items-grid a {
-    color: white;
-    font-weight: 500;
 }
 
 .rstm-tree-item--focused {
